salesforce_sfdx/main/default/objects/Agency_of_Record__c/Agency_of_Record__c.object-meta.xml
<CustomObject>
    <label>Agency of Record</label>
    <nameField>
        <displayFormat>AOR-{0000}</displayFormat>
        <label>Agency of Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency of Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>