salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency of Records</relationshipLabel>
    <relationshipName>Agency_of_Records</relationshipName>
    <type>Lookup</type>
</CustomField>