salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agency of Records (Agent)</relationshipLabel>
    <relationshipName>Agency_of_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>