salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address__c</fullName>
    <label>Agent Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>