salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>