salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fax__c</fullName>
    <label>Agent Fax</label>
    <type>Phone</type>
</CustomField>