salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>