salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Group or Member Plan Must be Populated</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency of Records (Group)</relationshipLabel>
    <relationshipName>Agency_of_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>