salesforce_sfdx/main/default/objects/Agency_of_Record__c/fields/Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Plan</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Agency of Records</relationshipLabel>
    <relationshipName>Agency_of_Records</relationshipName>
    <type>Lookup</type>
</CustomField>