salesforce_sfdx/main/default/objects/Agency_of_Record__c/validationRules/CCI_Member_Or_Group_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_Member_Or_Group_Must_Be_Populated</fullName>
    <active>true</active>
    <description>if Member Plan OR Group field is not populated then it Throws the error to populate either one of them before saving</description>
    <errorConditionFormula>AND(ISBLANK(Member_Plan__c),ISBLANK(Group__c))</errorConditionFormula>
    <errorMessage>Group OR Member Plan must be populated</errorMessage>
</ValidationRule>