salesforce_sfdx/main/default/objects/Agency_of_Record__c/validationRules/CCI_ValidateAgentName.validationRule-meta.xml
<ValidationRule>
    <fullName>CCI_ValidateAgentName</fullName>
    <active>true</active>
    <description>You don’t have permission to edit the Agent Name. Please contact your system administrator.</description>
    <errorConditionFormula>AND(ISCHANGED(Agent__c),OR($Profile.Name = 'CSR Agent',$Profile.Name = 'Group Administrator'))</errorConditionFormula>
    <errorMessage>You don’t have permission to edit the Agent Name. Please contact your system administrator.</errorMessage>
</ValidationRule>